--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,10 +1,12 @@
+@use 'var';
+
 .hero {
     padding: 5.6vw;
     min-height: 90vh;
     background-image: url('../img/matrix-poster.png');
     background-size: cover;
     
-    @media (max-width: 768px) {
+    @media (max-width: 1024px) {
         background-size: contain;
         background-repeat: no-repeat;
         min-width: none;
@@ -16,37 +18,30 @@
         height: 78.5vh;        
         display: flex;
         flex-direction: column;
-        justify-content: flex-end;
-        font-family: Amazon Ember, sans-serif;
-        color: #fff;
+        justify-content: flex-end;        
+        color: var.$textColor--default;
 
         @media (max-width: 768px) {
             height: auto;
             max-width: 100%;
         }
         
-        &__branding {           
-            font-weight: bold;           
-            font-size: 48px;
+        &__branding {                     
             text-transform: uppercase;
 
             @media (max-width: 768px) {
                 max-width: 100%;
-                text-transform: capitalize;
-                font-size: 42px;
+                text-transform: capitalize;               
                 margin-top: calc(50vw + 8px);
             }
 
         }
 
         p {
-            margin-top: 64px;
-            font-weight: lighter;            
-            font-size: 18px;                       
+            margin-top: 64px;                                   
             letter-spacing: 1px;
             
-            @media (max-width: 768px) {
-                font-size: 16px;
+            @media (max-width: 768px) {                
                 margin-top: 24px;
                 letter-spacing: 0;                
             }
@@ -57,39 +52,42 @@
             margin-top: 12px;
 
             @media (max-width: 768px) {
-                margin-top: 14px;
+                margin-top: 16px;
             }
             
             &__item {
                 padding: 2px 8px;
-                margin-right: 32px;
+                margin-right: 18px;
                 font-weight: bolder;
                 background-color: #d4d4d4;
-                color: #000;
+                color: var.$textColor--dark;
                 border-radius: 2px;
 
                 @media (max-width: 768px) {
                     font-size: 12px;
+                    margin-right: 12px;
                 }
             }
         }
 
         &__category {
             display: flex;
-            align-items: center;
-            margin-top: 8px;                 
+            align-items: center;            
+            margin-top: 4px;           
             
             &__item {
                 
-                a {
+                a { 
+                    display: inline-block;                   
                     font-weight: bolder;
                     background-color: #d4d4d4;
-                    color: #000;
-                    border-radius: 2px;
+                    color: var.$textColor--dark;;
+                    border-radius: 2px;                    
                     padding: 2px 8px;
-                    margin-right: 28px;
+                    margin-right: 18px;                                                  
 
                     @media (max-width: 768px) {
+                        margin-right: 12px;
                         font-size: 12px;
                     }
                 }
@@ -106,31 +104,21 @@
 
         h3 {
             margin-top: 64px;
-            font-weight: bolder;            
-            font-size: 18px;                       
-            letter-spacing: 1px;
-
-            @media (max-width: 768px) {
-                margin-top: 32px;
-            }
         }
 
         &__links {
             display:flex;            
-            margin-top: 32px;
-
-            @media (max-width: 768px) {
-                justify-content: center;
-            }
+            margin-top: 32px;            
             
             a {
-                margin: 24px;
+                margin: 24px;                
 
                 img {               
                     max-width: 96px;
+                    cursor: pointer;
 
                     @media (max-width: 768px) {
-                        max-width: 50%;
+                        max-width: 40%;
                     }
                 }
             }
