--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -15,6 +15,10 @@
     &__logo {
         width: 320px;
         margin: 0 auto 10px;
+
+        @media (max-width: 768px) {
+            width: 160px;
+        }
     }
 
     &__links {
@@ -51,6 +55,11 @@
     img {
         height: 28px;
         width: 28px;
+
+        @media (max-width: 768px) {
+            height: 18px;
+            width: 18px;
+        }
     }
 
     select {
@@ -59,6 +68,10 @@
         border-radius: 4px;        
         height: 38px;
         margin-left: 8px;
+
+        @media (max-width: 768px) {
+            height: 28px;
+        }
 
         &:hover {
             color: var.$textColor--dark;
