--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -3,6 +3,7 @@
 .footer {
     padding: 26px 8px;
     color: var.$textColor--default;
+    background-color: var.$bgColor--other;
     
     &__container {
         max-width: 1024px;
