--- a/src/styles/_sequel.scss
+++ b/src/styles/_sequel.scss
@@ -5,6 +5,7 @@
     min-height: 50vw;
     margin-top: 2.5vw;
     color: var.$textColor--default;
+    background: var.$bgColor--secondary;
 
     h4 {
         margin-bottom: 64px;
