Ajuste na seção synopsis

--- a/src/styles/_faq.scss
+++ b/src/styles/_faq.scss
@@ -11,7 +11,7 @@
     &__questions {
 
         &__item {
-            background-color: var.$bgColor--other;
+            background-color: var.$bgColor--secondary;
             margin-bottom: 16px;
 
             &__quest {                
