--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -4,5 +4,4 @@ $textColor--dark: #000;
 
 //General//
 $bgColor--default: #000;
-$bgColor--secondary: #103E22;
-$bgColor--other: #13151d;
+$bgColor--secondary: #1C2A24;
